reduced inset shadows, fixed export image alignment bug, changed footer, added shadow animation for nominee hover

--- a/src/styles/awards-styles.css
+++ b/src/styles/awards-styles.css
@@ -81,7 +81,7 @@ body {
   flex-direction: column;
   padding: 10px;
 }
-
+/* OLD SHADOWS (more spread)
 .award:nth-child(1) {
    box-shadow: 15px 0px 15px -15px rgba(0, 0, 0, 0.5) inset, -15px 0px 15px -15px rgba(0, 0, 0, 0.5) inset, 0px -5px 20px -5px rgba(0, 0, 0, 0.5) inset, 0px 15px 15px -15px rgba(0, 0, 0, 0.5) inset;
 }
@@ -91,6 +91,17 @@ body {
 
 .award:nth-child(3) {
   box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.5) inset, -5px 0px 5px -5px rgba(0, 0, 0, 0.5) inset, 0px -5px 5px -5px rgba(0, 0, 0, 0.5) inset;
+} */
+
+.award:nth-child(1) {
+   box-shadow: 15px 0px 10px -15px rgba(0, 0, 0, 0.5) inset, -15px 0px 10px -15px rgba(0, 0, 0, 0.5) inset, 0px -5px 7px -5px rgba(0, 0, 0, 0.5) inset, 0px 15px 10px -15px rgba(0, 0, 0, 0.5) inset;
+}
+.award:nth-child(2) {
+  box-shadow: 10px 0px 7px -10px rgba(0, 0, 0, 0.5) inset, -10px 0px 7px -10px rgba(0, 0, 0, 0.5) inset, 0px -5px 7px -5px rgba(0, 0, 0, 0.5) inset;
+}
+
+.award:nth-child(3) {
+  box-shadow: 5px 0px 5px -5px rgba(0, 0, 0, 0.5) inset, -5px 0px 5px -5px rgba(0, 0, 0, 0.5) inset, 0px -5px 7px -5px rgba(0, 0, 0, 0.5) inset;
 }
 
  .category-title {
@@ -151,7 +162,7 @@ body {
 
  .nominee-img {
   width: 100%;
-  display: block;
+  vertical-align: bottom;
   object-fit: cover;
   box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4); 
   aspect-ratio: 1/1;
@@ -159,6 +170,7 @@ body {
   -webkit-tap-highlight-color: transparent;
   -webkit-user-select: none;
   -webkit-user-drag: none;
+  transition: box-shadow 0.3s ease; 
 }
 
  .grammy {
@@ -166,14 +178,17 @@ body {
   position: absolute;
   /* bottom: 0px; */
   /* right: 8px; */
-  left: 67%;
+  left: 65%;
   top: 65%;
-  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.5));
+  border-radius: 50%;
+  /* filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.5)); */
+  box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.4); 
   display: none;
   -webkit-touch-callout: none;
   -webkit-tap-highlight-color: transparent;
   -webkit-user-select: none;
   -webkit-user-drag: none;
+  transition: box-shadow 0.3s ease; 
 }
 
  .nominee-name {
@@ -350,6 +365,10 @@ body {
     transform: scale(1.1);
   }
   
+  .user-select:hover * {
+    box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.4);
+  }
+  
   .user-select:hover .grammy {
     display: block;
     opacity: 0.75;
@@ -449,6 +468,7 @@ body {
   
   .nominee-name {
    font-size: 0.8em;
+   margin-top: 4.5px;
  }
  
  .category-title {
