--- a/src/styles/graphic-styles.css
+++ b/src/styles/graphic-styles.css
@@ -143,10 +143,10 @@ body {
 }
 
 #export-image .grammy {
-  width: 35%;
+  width: 37%;
   position: absolute;
-  bottom: 0px;
-  right: 8px;
+  top: 105px;
+  left: 123px;
   filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.5));
 }
 
