--- a/src/styles/home-styles.css
+++ b/src/styles/home-styles.css
@@ -236,3 +236,16 @@ a:visited {
     margin: 10px 0px;
   } */
 }
+
+@media screen and (max-width: 700px) {
+
+  .footer {
+    flex-direction: column;
+    flex-direction: column-reverse;
+  }
+  
+  #credit-2 {
+    margin-top: 10px;
+  }
+
+}
